# SPU-Tool

./: .gitignore  BUILD_INSTRUCTIONS.txt  BUILD_WINDOWS.bat  README.txt  README_Windows.txt  SPU_Tool_V1.0.spec  main_tkinter.py  pyproject.toml  requirements.txt
.github/workflows/: build-salary-exe.yml  build-windows.yml
Salary/: .gitignore  README.md  SalaryCalculator.bas  SalaryCalculator.spec  SalaryCalculator_Instructions.txt  net_salary.py  request.md  salary_calculator.py  salary_gui.py
Salary/.github/workflows/: build-exe.yml
src/: __init__.py  cli.py  excel_handler.py  gui.py  logger.py  streamlit_app.py  tool.md  validator.py
