[project]
name = "spu-processing-tool"
version = "2.0.0"
description = "CLI and GUI tool for processing CDD input files with SPU templates"
requires-python = ">=3.10"
dependencies = [
    "pandas>=1.3.0",
    "openpyxl>=3.0.0",
    "click>=8.0.0",
    "loguru>=0.7.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
spu-tool = "src.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
